[tool.poetry]
name = "climate"
version = "0.1.0"
description = ""
authors = ["Code-Apprentice <codeguru42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.2"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
